--- a/.env
+++ b/.env
@@ -3,5 +3,7 @@
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-DATABASE_URL="postgresql://admin:pgadmin@localhost:5432/realtor_db?schema=public"
+   
+DATABASE_URL="postgresql://admin:pgadmin@localhost:5433/realtor_db?schema=public"
+JSON_TOKEN_KEY="lkasjdflkjdklfjsdklfjkljdfeidsadkj"
+PRODUCT_KEY_SECRET="sdjflkdjsflkj-jdsajfldksfj-fajsdfkjads"
